# epanet-rtx

./: CMakeLists.txt  README.md  conanfile.py  epanet-rtx.docker  local-file.db
doc/: pages.dox
doc/markdown/: conventions.md
epanetrtx.xcodeproj/: project.pbxproj
epanetrtx.xcodeproj/xcshareddata/xcschemes/: epanetrtx.xcscheme
examples/conceptual/: timeseries_demo.cpp
src/: AggregatorTimeSeries.cpp  AggregatorTimeSeries.h  AutoRunner.cpp  AutoRunner.h  BaseStatsTimeSeries.cpp  BaseStatsTimeSeries.h  BufferPointRecord.cpp  BufferPointRecord.h  Clock.cpp  Clock.h  Components.hpp  ConcreteDbRecords.cpp  ConcreteDbRecords.h  ConstantTimeSeries.cpp  ConstantTimeSeries.h  CorrelatorTimeSeries.cpp  CorrelatorTimeSeries.h  Curve.cpp  Curve.h  CurveFunction.cpp  CurveFunction.h  DbAdapter.h  DbPointRecord.cpp  DbPointRecord.h  Dma.cpp  Dma.h  Element.cpp  Element.h  EpanetModel.cpp  EpanetModel.h  EpanetModelExporter.cpp  EpanetModelExporter.h  EpanetMsxModel.cpp  EpanetMsxModel.h  FailoverTimeSeries.cpp  FailoverTimeSeries.h  FirstDerivative.cpp  FirstDerivative.h  GainTimeSeries.cpp  GainTimeSeries.h  (+98 more)
test/: CMakeLists.txt  MyClientTest.cpp  MyClientTest.hpp  TestClient.h  TestController.h  test_element.cpp  test_filters.cpp  test_influx.cpp  test_main.h  test_record.cpp  test_units.cpp
tsflib.xcodeproj/: project.pbxproj
tsflib.xcodeproj/xcshareddata/xcschemes/: tsflib.xcscheme
